--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,5 +20,5 @@ Suggests:
 License: CC BY 4.0
 Encoding: UTF-8
 LazyData: true
-URL: https://github.com/waldronbios2/session5
+URL: https://waldronbios2.github.io/session5/
 VignetteBuilder: knitr
